@@ -70,8 +70,8 @@ public class TestNestedVirtualThreads {
             r.stop();
             List<RecordedEvent> events = Events.fromRecording(r);
             Events.hasEvents(events);
-            System.out.println(events.get(0));
-            RecordedEvent e = events.get(0);
+            System.out.println(events.getFirst());
+            RecordedEvent e = events.getFirst();
             RecordedThread t = e.getThread();
             Asserts.assertTrue(t.isVirtual());
             Asserts.assertEquals(t.getJavaName(), ""); // vthreads default name is the empty string.
